--- a/практическая 1/шаблон 1/ewfsdf.html
+++ b/практическая 1/шаблон 1/ewfsdf.html
@@ -15,7 +15,7 @@
         <div>
             <!-- Логотип, при клике переводит к главной секции страницы -->
             <a href="#main">
-                <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\шаблон 1\logo1.png" alt="Logo">
+                <img src="logo1.png" alt="Logo">
             </a>
         </div>
         <div>
@@ -50,7 +50,7 @@
             <h1 id="main">Добро пожаловать на мой сайт</h1>
             <p>Меня зовут Овчаренко Константин Сергеевич и я начинающий специалист по веб-разработке.</p>
             <!-- Изображение пользователя -->
-            <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\шаблон 1\logo1.png" alt="User Image">
+            <img src="logo1.png" alt="User Image">
         </div>
         <div>
             <!-- Секция о фронтенде -->
@@ -69,7 +69,7 @@
         <p>© Овчаренко Константин Сергеевич, 2024</p>
         <!-- Ссылка на Telegram с иконкой -->
         <a href="https://t.me/Eaglet12IQ">
-            <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\шаблон 1\tg_logo.png" alt="tg_Logo" height="45" width="45">
+            <img src="tg_logo.png" alt="tg_Logo" height="45" width="45">
         </a>
     </footer>
 
