--- a/практическая 1/шаблон 2/12авыва.html
+++ b/практическая 1/шаблон 2/12авыва.html
@@ -15,7 +15,7 @@
         <div>
             <!-- Логотип, при клике переводит к секции "Разработка веб-приложений" -->
             <a href="#web">
-                <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\шаблон 1\logo1.png" alt="Logo">
+                <img src="logo1.png" alt="Logo">
             </a>
         </div>
         <div>
@@ -50,15 +50,15 @@
         <div>
             <!-- Изображения с подписями -->
             <div>
-                <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\шаблон 1\logo1.png" alt="vizitka">
+                <img src="logo1.png" alt="vizitka">
                 <figcaption>Сайт-визитка</figcaption>
             </div>
             <div>
-                <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\шаблон 1\logo1.png" alt="corp">
+                <img src="logo1.png" alt="corp">
                 <figcaption>Корпоративный сайт</figcaption>
             </div>
             <div>
-                <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\шаблон 1\logo1.png" alt="imagize">
+                <img src="logo1.png" alt="imagize">
                 <figcaption>Интернет-магазин</figcaption>
             </div>
         </div>
@@ -75,7 +75,7 @@
         <p>© Овчаренко Константин Сергеевич, 2024</p>
         <!-- Ссылка на Telegram с иконкой -->
         <a href="https://t.me/Eaglet12IQ">
-            <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\шаблон 1\tg_logo.png" alt="Logo" height="45" width="45">
+            <img src="tg_logo.png" alt="Logo" height="45" width="45">
         </a>
     </footer>
 
