--- a/практическая 2/шаблон 3/3.html
+++ b/практическая 2/шаблон 3/3.html
@@ -6,7 +6,7 @@
     <!-- Адаптация страницы для различных устройств (мобильных, планшетов и т.д.) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Подключение файла стилей -->
-    <link rel="stylesheet" href="C:\Users\Admin\Desktop\фронтенд 02.09.24\практическая 2\шаблон 3\style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Название страницы -->
     <title>Мой сайт</title>
 </head>
@@ -17,7 +17,7 @@
         <div>
             <!-- Логотип, при клике переводит к секции "Разработка веб-приложений" -->
             <a href="#web">
-                <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\практическая 2\шаблон 3\logo1.png" alt="Logo">
+                <img src="logo1.png" alt="Logo">
             </a>
         </div>
         <div>
@@ -54,19 +54,19 @@
             <!-- Изображения с подписями -->
             <div>
                 <!-- Первое изображение и кнопка -->
-                <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\практическая 2\шаблон 3\logo1.png" alt="vizitka">
+                <img src="logo1.png" alt="vizitka">
                 <figcaption>Сайт-визитка</figcaption>
                 <button class="openFormBtn">Заказать</button>
             </div>
             <div>
                 <!-- Второе изображение и кнопка -->
-                <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\практическая 2\шаблон 3\logo1.png" alt="corp">
+                <img src="logo1.png" alt="corp">
                 <figcaption>Корпоративный сайт</figcaption>
                 <button class="openFormBtn">Заказать</button>
             </div>
             <div>
                 <!-- Третье изображение и кнопка -->
-                <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\практическая 2\шаблон 3\logo1.png" alt="imagize">
+                <img src="logo1.png" alt="imagize">
                 <figcaption>Интернет-магазин</figcaption>
                 <button class="openFormBtn">Заказать</button>
             </div>
@@ -145,12 +145,12 @@
         <p>© Овчаренко Константин Сергеевич, 2024</p>
         <!-- Ссылка на Telegram с иконкой -->
         <a href="https://t.me/Eaglet12IQ">
-            <img src="C:\Users\Admin\Desktop\фронтенд 02.09.24\практическая 2\шаблон 3\tg_logo.png" alt="Logo" height="45" width="45">
+            <img src="tg_logo.png" alt="Logo" height="45" width="45">
         </a>
     </footer>
 
     <!-- Подключение скриптов -->
-    <script src="C:\Users\Admin\Desktop\фронтенд 02.09.24\практическая 2\шаблон 3\script.js"></script>
+    <script src="script.js"></script>
 
     <!-- Подключение jQuery и плагина для маски ввода -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
